--- a/src/components/splash/Splashlogo.css
+++ b/src/components/splash/Splashlogo.css
@@ -1,10 +1,10 @@
-/* * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.splashcontainer {
+/* .splashcontainer {
   position: relative;
   width: 100%;
   display: flex;
